--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@remix-run/server-runtime": "1.6.7",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "isbot": "^3.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
@@ -48,16 +49,16 @@
     "@remix-run/dev": "1.6.7",
     "@remix-run/eslint-config": "1.6.7",
     "@testing-library/cypress": "^8.0.2",
-    "@testing-library/dom": "^8.12.0",
+    "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^14.0.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.1",
     "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.06",
+    "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.4",
     "binode": "^1.0.5",
     "c8": "^7.11.0",
@@ -77,9 +78,9 @@
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.1",
+    "vite": "^3.0.0",
     "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.8.2"
+    "vitest": "^0.18.0"
   },
   "engines": {
     "node": ">=14"
