--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,8 @@ jobs:
 
       - name: ⚡ Run vitest
         run: npm run test -- --coverage
+        env:
+          SESSION_STORAGE: test
 
   cypress:
     name: ⚫️ Cypress
