add dummy database url for tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,7 @@ jobs:
         run: npm run test -- --coverage
         env:
           SESSION_SECRET: test
+          DATABASE_URL: test
 
   cypress:
     name: ⚫️ Cypress
