--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.06",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.28.5",
     "autoprefixer": "^10.4.4",
     "binode": "^1.0.5",
     "c8": "^7.11.0",
