--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@remix-run/react": "1.19.3",
     "@remix-run/serve": "1.19.3",
     "@remix-run/server-runtime": "1.19.3",
+    "@remix-run/v1-route-convention": "^0.1.4",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
     "isbot": "^3.5.0",
