--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "/public/build"
   ],
   "dependencies": {
-    "@prisma/client": "^3.11.1",
+    "@prisma/client": "^5.20.0",
     "@remix-run/node": "2.12.1",
     "@remix-run/react": "2.12.1",
     "@remix-run/serve": "2.12.1",
@@ -37,7 +37,8 @@
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tiny-invariant": "^1.2.0"
+    "tiny-invariant": "^1.2.0",
+    "tsx": "^4.19.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
@@ -48,9 +49,9 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.4.1",
-    "@types/node": "^18.18.6",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.7.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.1.0",
@@ -68,12 +69,10 @@
     "postcss": "^8.4.12",
     "prettier": "2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
-    "prisma": "^3.11.1",
+    "prisma": "^5.20.0",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.23",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.1",
-    "typescript": "^5.3.3",
+    "typescript": "^5.6.2",
     "vite": "^5.2.6",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.4.0"
@@ -82,6 +81,6 @@
     "node": ">=18"
   },
   "prisma": {
-    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
